# bzeditor

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/analogclock/: CMakeLists.txt
examples/doteditor/: CMakeLists.txt  bezierMk2.cc  drawingpanel.cpp  drawingpanel.h  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui
examples/octave/: CMakeLists.txt  CoordinateTransformator.cc  CoordinateTransformator.h  Plotter.cc  Plotter.h  bezierMk2.cc  bezierMk2.h  plot_b6.cc
src/: CMakeLists.txt
src/bzeditor/: CMakeLists.txt  bezierMk2.h  drawingpanel.cpp  mainwindow.ui
